--- a/src/stylesheets/components/_text.scss
+++ b/src/stylesheets/components/_text.scss
@@ -9,20 +9,10 @@ a,
 span,
 p,
 time,
+input,
+textarea,
+li,
 div {
   text-shadow: none !important;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-i,
-a,
-span,
-p,
-time {
   color: var(--grey-1) !important;
 }
