--- a/src/stylesheets/helpers/_variables.scss
+++ b/src/stylesheets/helpers/_variables.scss
@@ -8,7 +8,7 @@
   --blue-1: #3daee9;
   --blue-1-50: #3daee980;
   --blue-2: #0af;
-  // --blue-3: #1d99f3;
+  --blue-3: #1d99f3;
   --yellow-1: #fdbc4b;
   --yellow-1-50: #fdbc4b80;
   --yellow-2: #c9ce3b;
