--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -16,9 +16,12 @@
 @import "components/text";
 
 // ### Pages ###
+@import "pages/contact";
 @import "pages/dashboard";
+@import "pages/info";
 @import "pages/lesson";
 @import "pages/lessons";
+@import "pages/level";
 @import "pages/session";
 
 // ### Extensions
