--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -30,3 +30,5 @@
 
 // ### Extensions
 @import "extensions/lightning-mode";
+@import "extensions/reorder-ultimate-2";
+@import "extensions/stroke-order";
