--- a/src/stylesheets/pages/_lesson.scss
+++ b/src/stylesheets/pages/_lesson.scss
@@ -24,9 +24,7 @@
       }
     }
   }
-}
 
-#reviews-summary {
   li {
     box-shadow: var(--shadow-1) !important;
     border-radius: 5px !important;
@@ -47,7 +45,9 @@
       background-color: var(--green-1) !important;
     }
   }
+}
 
+#reviews-summary {
   #review-stats,
   #incorrect,
   #correct {
@@ -114,6 +114,24 @@
 
     h2 {
       background-color: transparent !important;
+    }
+  }
+
+  #radicals {
+    h2 {
+      color: var(--blue-1) !important;
+    }
+  }
+
+  #kanji {
+    h2 {
+      color: var(--yellow-1) !important;
+    }
+  }
+
+  #vocabulary {
+    h2 {
+      color: var(--green-1) !important;
     }
   }
 }
