--- a/src/stylesheets/pages/_lessons.scss
+++ b/src/stylesheets/pages/_lessons.scss
@@ -10,6 +10,13 @@
   }
 }
 
+#screen-lesson-ready {
+  li#lesson-ready-continue {
+    @include button;
+    border-color: transparent;
+  }
+}
+
 #stats,
 #summary-button,
 #header-buttons {
@@ -33,6 +40,7 @@
   header {
     position: relative !important;
     z-index: 11 !important;
+    box-shadow: none !important;
   }
 
   #main-info {
