:bug: small css fixes

--- a/src/stylesheets/pages/_info.scss
+++ b/src/stylesheets/pages/_info.scss
@@ -74,8 +74,8 @@ section#progress {
     border-radius: 5px !important;
 
     section {
-      margin-left: 2vw !important;
-      margin-right: 2vw !important;
+      margin-left: 10px !important;
+      margin-right: 10px !important;
     }
   }
 
